# verity

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  setup.py  start-verity.command
.githooks/: README.md  pre-push
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  COLLABORATION.md  CURRENT_STATE.md  DECISION-semantic-coverage.md  LESSONS.md  MEMORY.md  PROGRESS.md  SESSION_START.md
docs/spec/: ENGINEERING_SPEC-v0.3.md  REUSE_DECISIONS-v0.2.md
evals/: README.md
plans/: ACTIVE.md  TEMPLATE.md
standards/: README.md  detector_candidates.json  detector_mappings.json  risks.json  sources.json
tests/: test_acceptance_19.py  test_gitleaks_install.py  test_http_provider.py  test_prompt_rules.py  test_round12.py  test_round13.py  test_round14_standards.py  test_round15_corpus.py  test_round16_static_breadth.py  test_round17_semantic_breadth.py  test_round18_eval_provider.py  test_round18_semantic_quality.py  test_round19_history_score.py  test_round19_scoring.py  test_round19_web_score.py  test_round20_closure.py  test_round21_semantic_contract.py  test_round22_blind_review.py  test_round4.py  test_round5.py  test_round55_semantic_benchmark.py  test_round55_semantic_capability.py  test_round5_hotfix.py  test_round7_guidance.py  test_semantic.py  test_skill_rules.py  test_verify_repo.py  test_walking_skeleton.py  test_web_mvp.py  test_web_provider_config.py
tools/: butler_reference.vite.config.mjs  butler_reference_entry.ts  gitleaks_release.json  install_gitleaks.py  run_corpus.py  run_semantic_model_eval.py  run_v1_closure.py  semantic_head_to_head.py  start_local_web.py  verify_repo.py
(+412 files in other folders)
