[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verity"
version = "0.0.1"
description = "Verity — Prompt & Skill Auditor (Phase 0 + Walking Skeleton, read-only V1)"
readme = "README.md"
requires-python = ">=3.9,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "The Verity Authors" }]
# Runtime deps: full pin is in requirements.lock; the range below is the
# supported install window (identical minimum vs. lockfile major).
dependencies = [
  "jsonschema>=4.20,<5",
  "PyYAML>=6,<7",
  "bandit>=1.7.10,<1.8",
  "starlette>=0.41,<0.42",
  "python-multipart>=0.0.20,<0.1",
  "anyio>=4,<5",
]

[project.optional-dependencies]
dev = [
  "pytest>=7,<9",
  "httpx>=0.27,<1",
]
web = [
  "uvicorn>=0.30,<0.34",
]

[project.scripts]
verity = "verity.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
